<resources>
    <string name="app_name">SmartCity</string>
    <string name="deleteNoteTitle">Delete Note</string>
    <string name="deleteNoteMessage">Want to delete note?</string>
    <string name="editProblem">Please, write information on the Text Fields!</string>
    <string name="updateNoteTitle">Update Note</string>
    <string name="updateNoteMessage">Want to update note?</string>
    <string name="cancelDialog">Cancel</string>
    <string name="confirmDialog">Yes</string>
    <string name="createProblem">Please, write information on the Text Fields!</string>
    <string name="editEqual">Note info is the same as before</string>
    <string name="preference_file_key" translatable="false">KEY</string>
    <string name="username" translatable="false">username</string>
    <string name="idUser" translatable="false">1</string>
    <string name="RememberMe">Remember Me</string>
    <string name="title_activity_maps">Map</string>
    <string name="LoginSuccess">Successful login</string>
    <string name="LoginFailure">Login error</string>
    <string name="TitleListNotes">Notes</string>
    <string name="CreateNote">Create Note</string>
    <string name="Title">Title</string>
    <string name="Info">Info</string>
    <string name="Create">Create</string>
    <string name="Home">Home</string>
    <string name="Beginning">Login</string>
    <string name="UsernameLogin">username</string>
    <string name="PwLogin">password</string>
    <string name="Login">login</string>
    <string name="Coordinates">Coordinates: </string>
    <string name="Edit">Edit</string>
    <string name="Date">Date</string>
    <string name="NoteDelete">Deleted</string>
    <string name="Image">Select Image</string>
    <string name="Save">Save</string>
    <string name="reportProblem">Please, write information on the Text Fields!</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet" translatable="false">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin" translatable="false">Dropped Pin</string>
    <string name="poi" translatable="false">poi</string>

</resources>